# IoticSpellbooks

./: .copier-answers.hexdoc-hexcasting.yml  .gitignore  build.gradle  gradle.properties  pyproject.toml  settings.gradle
.github/workflows/: build_docs.yml
doc/: README.md  hexdoc.toml
doc/resources/assets/ioticspellbooks/lang/: en_us.flatten.json5  zh_cn.flatten.json5
doc/resources/data/hexcasting/tags/action/: per_world_pattern.json
doc/src/hexdoc_ioticspellbooks/: _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/1.1.0/: index.html
docs/v/1.1.0/1.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.1.0/1.0/en_us/basics/: index.html
docs/v/1.1.0/1.0/en_us/casting/: index.html
docs/v/1.1.0/1.0/en_us/greatwork/: index.html
docs/v/1.1.0/1.0/en_us/interop/: index.html
docs/v/1.1.0/1.0/en_us/interop/irons_spellbooks/: index.html
docs/v/1.1.0/1.0/en_us/interop/irons_spellbooks/ioticspellbooks:cast_iron_spell/: index.html
docs/v/1.1.0/1.0/en_us/interop/irons_spellbooks/ioticspellbooks:conjure_spellbook/: index.html
docs/v/1.1.0/1.0/en_us/items/: index.html
docs/v/1.1.0/1.0/en_us/lore/: index.html
docs/v/1.1.0/1.0/en_us/patterns/: index.html
docs/v/1.1.0/1.0/en_us/patterns/great_spells/: index.html
docs/v/1.1.0/1.0/en_us/patterns/spells/: index.html
docs/v/latest/master/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/master/en_us/basics/: index.html
docs/v/latest/master/en_us/casting/: index.html
docs/v/latest/master/en_us/greatwork/: index.html
docs/v/latest/master/en_us/interop/: index.html
docs/v/latest/master/en_us/interop/irons_spellbooks/: index.html
docs/v/latest/master/en_us/items/: index.html
docs/v/latest/master/en_us/lore/: index.html
docs/v/latest/master/en_us/patterns/: index.html
docs/v/latest/master/en_us/patterns/great_spells/: index.html
docs/v/latest/master/en_us/patterns/spells/: index.html
src/main/java/pm/meh/ioticspellbooks/: Config.java  IoticSpellbooks.java
src/main/java/pm/meh/ioticspellbooks/compat/hex/: HexRegistry.java  (+1 more)
src/main/java/pm/meh/ioticspellbooks/entity/: ConjuredSpellbookAnimation.java  ConjuredSpellbookEntity.java  ConjuredSpellbookEntityRenderer.java  ConjuredSpellbookModel.java
src/main/java/pm/meh/ioticspellbooks/iface/: IGuiSpellcastingMixin.java
src/main/java/pm/meh/ioticspellbooks/network/: PacketHandler.java
src/main/kotlin/pm/meh/ioticspellbooks/: IoticSpellbooks.kt
src/main/resources/: ioticspellbooks.mixins.json  pack.mcmeta
src/main/resources/assets/ioticspellbooks/lang/: en_us.json  zh_cn.json
src/main/resources/assets/ioticspellbooks/models/item/: scroll_hex.json
src/main/resources/data/ioticspellbooks/tags/items/: hex_focus.json
src/main/resources/data/irons_spellbooks/tags/items/: school_focus.json
(+83 files in other folders)
